--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "contentful": "^7.5.0",
+    "icons": "^1.0.0",
     "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6",
