--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "contentful": "^7.5.0",
     "moment": "^2.24.0",
+    "path-to-regexp": "^3.0.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
