--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@githubprimer/octicons-react": "^8.5.0",
     "bootstrap": "^4.3.1",
     "contentful": "^7.5.0",
+    "dotenv": "^8.0.0",
     "moment": "^2.24.0",
     "path-to-regexp": "^3.0.0",
     "react": "^16.8.4",
