--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-player": "^1.11.0",
     "react-responsive": "^6.1.2",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "react-slick": "^0.24.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
